force-app/main/default/objects/Asset_Mapping__c/Asset_Mapping__c.object-meta.xml
<CustomObject>
    <label>Asset Mapping</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Asset Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>