force-app/main/default/objects/Asset_Mapping__c/fields/Allocation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Start_Date__c</fullName>
    <label>Allocation Start Date</label>
    <type>Date</type>
</CustomField>