force-app/main/default/objects/Asset_Mapping__c/fields/Asset_Master__c.field-meta.xml
<CustomField>
    <fullName>Asset_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Master</label>
    <referenceTo>Asset_Master__c</referenceTo>
    <relationshipLabel>Asset Mappings</relationshipLabel>
    <relationshipName>Asset_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>