force-app/main/default/objects/Asset_Mapping__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>