force-app/main/default/objects/Asset_Mapping__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Mappings (Distributor)</relationshipLabel>
    <relationshipName>Asset_Mappings_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>