force-app/main/default/objects/Asset_Mapping__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <formula>TEXT( Distributor__r.Hub__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub</label>
    <type>Text</type>
</CustomField>