force-app/main/default/objects/Asset_Mapping__c/fields/Reporting_Manager_1__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_1__c</fullName>
    <formula>Retailer__r.Owner.L1_Approver__r.FirstName  &amp; IF(ISBLANK( Retailer__r.Owner.L1_Approver__r.MiddleName ), &quot;&quot;, &quot; &quot; &amp; Retailer__r.Owner.L1_Approver__r.MiddleName) &amp;
&quot; &quot; &amp;  Retailer__r.Owner.L1_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager 1</label>
    <type>Text</type>
</CustomField>