force-app/main/default/objects/Asset_Mapping__c/fields/Reporting_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_2__c</fullName>
    <formula>Retailer__r.Owner.L1_Approver__r.L1_Approver__r.FirstName  + &apos; &apos; +  Retailer__r.Owner.L1_Approver__r.L1_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager 2</label>
    <type>Text</type>
</CustomField>