force-app/main/default/objects/Asset_Mapping__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Mappings (Retailer)</relationshipLabel>
    <relationshipName>Asset_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>