force-app/main/default/objects/Asset_Mapping__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <formula>Retailer__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesman</label>
    <type>Text</type>
</CustomField>