force-app/main/default/objects/Asset_Mapping__c/fields/Scrapped__c.field-meta.xml
<CustomField>
    <fullName>Scrapped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scrapped</label>
    <type>Checkbox</type>
</CustomField>