force-app/main/default/objects/Asset_Mapping__c/fields/Super_Stockist__c.field-meta.xml
<CustomField>
    <fullName>Super_Stockist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Super Stockist</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Mappings (Super Stockist)</relationshipLabel>
    <relationshipName>Asset_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>